--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=pkm
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/pkm}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Sathwik@3587}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.ai.openai.chat.base-url=https://generativelanguage.googleapis.com
 spring.ai.openai.chat.completions-path=/v1beta/openai/chat/completions
-spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.api-key=${OPENAI_API_KEY:AIzaSyCF2AfCMneiFRLsmjsJYDyb7-An8HSsZmc}
 spring.ai.openai.chat.options.model=gemini-2.0-flash
 server.port = ${PORT:8080}
